--- a/jsons/translations/Simplified_Chinese.properties
+++ b/jsons/translations/Simplified_Chinese.properties
@@ -1,5 +1,5 @@
 
-
+Let's begin! = 开始Unicv！ -  勇敢的心模组QQ群932352906
 #数值
 
 Faith = 战争支持度
@@ -18,6 +18,13 @@ The unit or heavy weapon used by infantry includes other miscellaneous equipment
 Equipping our infantry units with anti-tank rifle will allow them to fight light armoured vehicles without losing power. = 给我方步兵单位装备反坦克步枪能让他们对抗轻型装甲车辆的同时也保证不丧失机动力。
 For infantry to be effective against heavier armoured vehicles, smaller hollow-charge weapons must be manufactured. = 为使步兵有效对抗更重型的装甲车辆，必须制造更小型的空心装药武器。
 The units or heavy weapons used by infantry include other miscellaneous equipment required; advanced weapons such as assault rifles and anti-tank rocket launchers; and the spread of small-range weapons. = 步兵适用的单位或重武器，亦涵括其他所需杂项装备；包含突击步枪和反坦克火箭筒等先进武器；将原本小范围列装的武器普及。
+文本-科技-山地步兵I = 在山脉上战斗会使部队暴露在许多知名风险之下，但有时这无可避免。士兵将接受山地特种训练以将风险最小化。
+文本-科技-山地步兵II = 我方部队接受训练后不仅能保存自己，甚至能灵活利用山脉地形创造优势。利用轻重型装备与骡马运输，山地步兵在山脉地形中将有比其他步兵更优秀的机动性。
+文本-科技-山地步兵III = 在高海拔低气温的艰苦山地环境执行任务，我军山地部队必须接受非比寻常的训练并拥有坚定纪律。
+文本-科技-伞兵I = 将空降部队引入陆军后，我方能强行打开突破口并在过去无法进入的地区部署关键点部队，这带来新的战术机遇。
+文本-科技-伞兵II = 寥寥数名空降兵组成的小型行动组到大型空降师的转变为大规模空降行动铺平了道路。曾经让人耳目一新的空降部队现已在战场上数见不鲜。
+文本-科技-伞兵III = 学习根据天气变化来调整空降行动、将诸如伞兵靴之类的必须装备标准化以及更长期的特别训练将使危险的空降任务中的混乱与风险降到最低点。
+
 
 #科技名
 
